<resources>
    <string name="app_name">TASE</string>

    <string name="abouttext">Copyright (C) 2017\nLicensed under <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">GNU AGPLv3</a></string>
    <string name="seed_node" translatable="false">ns6cgwkrvygikza7</string>

    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="prefs_reset_all">Reset All</string>

    <plurals name="notification_new_messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <string name="title_activity_maps">Map</string>
    <string name="police">Police</string>
    <string name="camera">Camera</string>
    <string name="crime">Crime</string>
    <string name="accident">Accident</string>
    <string name="add_alert">Add Alert</string>
    <string name="alert_limit">Alert limit reached</string>
    <string name="registering_tor">Registering Tor Hidden Service</string>
    <string name="delete">Delete</string>
    <string name="press_hold">Press and hold to add alert</string>

</resources>
